<resources>
    <string name="app_name">Memory Game</string>
    <string name="tv_level">Level: 1</string>
    <string name="tv_number">0</string>
    <string name="number_input_hint">What was the number?</string>
    <string name="confirm_btn">Confirm</string>
    <string name="start_btn">Start</string>
    <string name="memory_game">Memory Game</string>
    <string name="game_instructions">The game will show you a number, your task is to remember it. As the levels go on, the number will become longer and longer. Try your best to remember them and reach the highest point! Click the start button to start the game.</string>
    <string name="setting_btn">Setting</string>
    <string name="setting_page">Setting</string>
    <string name="hint_speed_option">hint: The difficulty will increase when the speed is set to fast. The score will also increase as the difficulty increase.</string>
    <string name="speed_setting">Display speed:</string>
    <string name="speed_option_slow">Slow</string>
    <string name="speed_option_default">Default</string>
    <string name="speed_option_fast">fast</string>
    <string name="end_btn">End the game</string>
    <string name="tv_speed">Speed:</string>
    <string name="tv_score">Score:</string>
    <string name="highscore1">-</string>
    <string name="highscore2">-</string>
    <string name="highscore3">-</string>
    <string name="highscore4">-</string>
    <string name="highscore5">-</string>
    <string name="restart_btn">RESTART</string>
    <string name="highest_msg">The highest score is:</string>
    <string name="your_score">Your Score:</string>
    <string name="speed">Speed:</string>
    <string name="high_score">High Score</string>
</resources>