<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Setting">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setting_page"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/speed_setting"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/slow_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/speed_option_slow" />

    <Button
        android:id="@+id/default_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed_option_default" />

    <Button
        android:id="@+id/fast_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speed_option_fast" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/hint_speed_option"
        android:textSize="14sp" />
</LinearLayout>