<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_level" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_number"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="1234567890"
        android:ems="10"
        android:hint="@string/number_input_hint"
        android:inputType="numberSigned"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/b_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_btn" />
</LinearLayout>